--- a/contacts.html
+++ b/contacts.html
@@ -14,12 +14,19 @@
     <link rel="stylesheet" href="assets/css/models.css">
     <link rel="stylesheet" href="assets/css/contacts.css">
 
+    <script src="assets/js/contacts.js"></script>
     <script src="assets/js/header.js"></script>
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/login-signup.js"></script>
+    <script src="assets/js/mini_backend.js"></script>
+    <script>
+        setURL('https://juan-desantos.developerakademie.net/smallest_backend_ever');
+    </script>
+
     <div w3-include-html="assets/templates/header.html"></div>
 </head>
 
-<body onload="init()">
+<body onload="initContacts()">
     <div w3-include-html="assets/templates/menu.html"></div>
     
 </body>
