--- a/summary.html
+++ b/summary.html
@@ -35,7 +35,7 @@
         <div class="container_summary column-center">
             <div class="summary_head row-center ">
                 <a class="summary_morning font400" id="greetText"></a>
-                <a class="summary_user font400" id="summaryUser"></a>
+                <a class="summary_user font400" id="summaryUser">Guest</a>
             </div>
         </div>
         <div class="summary_board column-center-center">
