--- a/addTask.html
+++ b/addTask.html
@@ -115,8 +115,7 @@
         </div>
         <div class="add_task_buttons_bottom row-center-center">
             <button class="add_task_buttons_clear row-center-center">
-                <a class="add_task_clear_text font400">Clear</a>
-                <img src="assets/img/closePopCreate.svg" class="add_task_clear_img">
+                <a class="add_task_clear_text font400">Clear X</a>
             </button>
             <button class="add_task_buttons_create row-center-center">
                 <a class="add_task_create_text font400">Create Task</a>
