--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="assets/js/forgotPassword.js"></script>
     <script src="assets/js/script.js"></script>
     <script src="assets/js/mini_backend.js"></script>
+    <script src="assets/js/summary.js"></script>
     <script>
         setURL('https://juan-desantos.developerakademie.net/smallest_backend_ever');
     </script>
@@ -73,10 +74,10 @@
                 <a class="login_forgot_password font400" onclick="showForgotPassword()">Forgot my password</a>
             </div>
             <div class="login_buttons row-center-flexstart">
-                <button class="login_button_cont row-center-center">
+                <button class="login_button_cont row-center-center" >
                     <a class="login_button font400">Log in</a>
                 </button>
-                <button class="guest_login_button_cont row-center-center" onclick="logInGuest()">
+                <button class="guest_login_button_cont row-center-center" onclick="greetGuest()">
                     <a class="guest_login_button font400">Guest log in</a>
                 </button>
             </div>
