--- a/board.html
+++ b/board.html
@@ -58,54 +58,28 @@
                     <a class="column_tasks_text font400">To do</a>
                     <img src="assets/img/plusbutton.svg" class="column_task_plus">
                 </div>
-                <!-- task example -->
-                <div class="minitask_container column-center-center">
-                    <div class="minitask column-flex-start">
-                        <div class="minitask_title_cont column-flex-start">
-                            <a class="minitask_title font400">Design</a>
-                        </div>
-                        <div class="minitask_description_cont column-flex-start">
-                            <a class="minitask_descr_title font400">Example title</a>
-                            <a class="minitask_descr_text font400">This is an example of the description</a>
-                        </div>
-                        <div class="minitask_subtask row-center-center">
-                            <div class="minitask_sub_bar"></div>
-                            <a class="minitask_sub_text font400">1/2 Done</a>
-                        </div>
-                        <div class="minitask_buttom_cont row-center-center">
-                            <div class="minitask_contacts_cont row-center-center">
-                                <div class="minitask_contact column-center-center">
-                                    <a class="minitask_contact_text font400">FG</a>
-                                </div>
-                                <div class="minitask_contact column-center-center">
-                                    <a class="minitask_contact_text font400">AD</a>
-                                </div>
-                            </div>
-                            <div class="minitask_prio_cont row-center-center">
-                                <img src="assets/img/PrioAlta.svg" class="minitask_prio">
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <div class="column_for_tasks" id="todoColumn" ondrop="moveTo('todo')" ondragover="allowDrop(event)"></div>
             </div>
             <div class="board_columns_column column-center">
                 <div class="board_column_tasks row-spacebet-center">
                     <a class="column_tasks_text font400">In progress</a>
                     <img src="assets/img/plusbutton.svg" class="column_task_plus">
                 </div>
+                <div class="column_for_tasks" id="InProgressColumn" ondrop="moveTo('progress')" ondragover="allowDrop(event)"></div>
             </div>
             <div class="board_columns_column column-center">
                 <div class="board_column_tasks row-spacebet-center">
                     <a class="column_tasks_text font400">Await feedback</a>
                     <img src="assets/img/plusbutton.svg" class="column_task_plus">
                 </div>
-                
+                <div class="column_for_tasks" id="feedbackColumn" ondrop="moveTo('feedback')" ondragover="allowDrop(event)"></div>
             </div>
             <div class="board_columns_column column-center">
                 <div class="board_column_tasks row-spacebet-center">
                     <a class="column_tasks_text font400">Done</a>
                     <img src="assets/img/plusbutton.svg" class="column_task_plus">
                 </div>
+                <div class="column_for_tasks" id="DoneColumn" ondrop="moveTo('done')" ondragover="allowDrop(event)"></div>
             </div>
         </div>
     </div>
